user user authentication

--- a/ablog/theblog/templates/add_post.html
+++ b/ablog/theblog/templates/add_post.html
@@ -6,13 +6,16 @@
 
 {%block content %}
     
+{%if user.is_authenticated%}
 
-<h1>Adicionar Receita</h1>
-<div class="form-group">
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button class="btn btn-secondary">Adicionar</button>
-</div>
+    <h1>Adicionar Receita</h1>
+    <div class="form-group">
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button class="btn btn-secondary">Adicionar</button>
+    </div>
+
+{% endif %}
 
 {% endblock %}
