--- a/ablog/theblog/templates/delete_post.html
+++ b/ablog/theblog/templates/delete_post.html
@@ -1,20 +1,25 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Editar receita
+    Deletar receita
 {% endblock title %}
 
 {%block content %}
     
 {%if user.is_authenticated%}
-    <h1>Editar Receita</h1>
 
+    <h2>Deletar Receita</h2>
+    <br/><br/>
+    <h4>Deletar: {{post.title}}</h4>
+
+    <br/>
     <div class="form-group">
         <form method="POST">
             {% csrf_token %}
-            {{form.as_p}}
-            <button class="btn btn-secondary">Salvar</button>
+            <strong>Tem certeza?</strong><br/><br/>
+            <button class="btn btn-secondary">Deletar</button>
     </div>
+
 {% endif %}
 
 {% endblock %}
