--- a/ablog/theblog/templates/home.html
+++ b/ablog/theblog/templates/home.html
@@ -7,9 +7,14 @@
 
 <ul>
 {% for post in object_list %}
-    <li><a href="{%url 'article-detail' post.pk%}">{{post.title}}</a> - {{post.author.first_name}} {{post.author.last_name}} - <a href="{%url 'update_post' post.pk%}">Editar</a> <br/>
-
-    {{post.body}}</li>
+    <li><a href="{%url 'article-detail' post.pk%}">{{post.title}}</a> - {{post.author.first_name}} {{post.author.last_name}}
+        {%if user.is_authenticated%}
+            <small> - <a href="{%url 'update_post' post.pk%}">Editar</a></small>
+            <small><a href="{%url 'delete_post' post.pk%}">Deletar</a></small>
+        {% endif %}
+    <br/>
+    {{post.body | slice:":500"}}
+    </li>
 {% endfor %}
 </ul>
 
