--- a/ablog/theblog/templates/add_post.html
+++ b/ablog/theblog/templates/add_post.html
@@ -16,6 +16,11 @@
         <button class="btn btn-secondary">Adicionar</button>
     </div>
 
+    <script>
+        var name = "{{user.id}}";
+        document.getElementById("elder").value
+            = name;
+    </script>
 {% endif %}
 
 {% endblock %}
