--- a/ablog/theblog/templates/article_details.html
+++ b/ablog/theblog/templates/article_details.html
@@ -6,12 +6,14 @@
 
 {%block content %}
 
-
 <h1>{{post.title}}</h1>
-<small>By: {{post.author.first_name}} {{post.author.last_name}}</small>
+<small>By: {{post.author}} {{post.author.last_name}}</small>
+
 {%if user.is_authenticated%}
-    <small><a href="{%url 'update_post' post.pk%}">Editar</a> </small>
-    <small><a href="{%url 'delete_post' post.pk%}">Deletar</a></small>
+    {% if user.id == post.author.id%}
+        <small><a href="{%url 'update_post' post.pk%}">Editar</a> </small>
+        <small><a href="{%url 'delete_post' post.pk%}">Deletar</a></small>
+    {% endif %}
 {% endif %}
 </br>
 <hr>
