--- a/ablog/theblog/templates/home.html
+++ b/ablog/theblog/templates/home.html
@@ -3,14 +3,16 @@
 {%block content %}
     
 
-<h1>Posts</h1>
+<h1>Receitas</h1>
 
 <ul>
 {% for post in object_list %}
-    <li><a href="{%url 'article-detail' post.pk%}">{{post.title}}</a> - {{post.author.first_name}} {{post.author.last_name}}
+    <li><a href="{%url 'article-detail' post.pk%}">{{post.title}}</a> - {{post.author}}
         {%if user.is_authenticated%}
-            <small> - <a href="{%url 'update_post' post.pk%}">Editar</a></small>
-            <small><a href="{%url 'delete_post' post.pk%}">Deletar</a></small>
+            {% if user.id == post.author.id%}
+                <small> - <a href="{%url 'update_post' post.pk%}">Editar</a></small>
+                <small><a href="{%url 'delete_post' post.pk%}">Deletar</a></small>
+            {% endif %}
         {% endif %}
     <br/>
     {{post.body | slice:":500"}}
