--- a/ablog/theblog/templates/update_post.html
+++ b/ablog/theblog/templates/update_post.html
@@ -7,14 +7,16 @@
 {%block content %}
     
 {%if user.is_authenticated%}
-    <h1>Editar Receita</h1>
+    {% if user.id == post.author.id%}
+        <h1>Editar Receita</h1>
 
-    <div class="form-group">
-        <form method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button class="btn btn-secondary">Salvar</button>
-    </div>
+        <div class="form-group">
+            <form method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button class="btn btn-secondary">Salvar</button>
+        </div>
+    {% endif %}
 {% endif %}
 
 {% endblock %}
